After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659831 - icon-canvas-item: don't draw pango layouts when renaming
icon-canvas-item: don't draw pango layouts when renaming
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-22 14:13 UTC by Cosimo Cecchi
Modified: 2011-09-22 17:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
icon-canvas-item: don't draw pango layouts when renaming (1.40 KB, patch)
2011-09-22 14:13 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-09-22 14:13:47 UTC
.
Comment 1 Cosimo Cecchi 2011-09-22 14:13:49 UTC
Created attachment 197248 [details] [review]
icon-canvas-item: don't draw pango layouts when renaming

Fixes a regression introduced in commit
95910c94fd46f368b66f02e1961dc5f273b38c82 that causes unwanted text to be
drawn while renaming a file in icon view.
Comment 2 Cosimo Cecchi 2011-09-22 17:25:40 UTC
Attachment 197248 [details] pushed as f07aa75 - icon-canvas-item: don't draw pango layouts when renaming

Pushed after r-t approved this.