icon-canvas-item: don't draw pango layouts when renaming

Fixes a regression introduced in commit
95910c94fd46f368b66f02e1961dc5f273b38c82 that causes unwanted text to be
drawn while renaming a file in icon view.

https://bugzilla.gnome.org/show_bug.cgi?id=659831